Write tests for swagger HTTP client
