# product-api/handlers/put.go
@@ -11,7 +11,7 @@ import (
 // swagger:route PUT /products products updateProduct
 // Update a products details
 // responses:
-//	201: noContentResponse
+//	204: noContentResponse
 //  404: errorResponse
 //  422: errorValidation
 
@@ -19,6 +19,7 @@ import (
 func (p *Products) UpdateProducts(w http.ResponseWriter, r *http.Request) {
 	prod := r.Context().Value(KeyProduct{}).(*data.Product)
 	p.l.Println("[DEBUG] updating record id", prod.ID)
+	w.Header().Add("Content-Type", "application/json")
 
 	err := data.UpdateProduct(prod)
 	if errors.Is(err, data.ErrProductNotFound) {
